show, edit and delete product Restfull API with swagger documentation
