# app/Http/Controllers/ProductController.php
@@ -3,11 +3,11 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\ProductCreateRequest;
+use App\Http\Requests\ProductUpdateRequest;
 use App\Repositories\ProductRepository;
 use Exception;
 use App\Traits\ResponseTrait;
 use Illuminate\Http\JsonResponse;
-use Illuminate\Http\Request;
 
 class ProductController extends Controller
 {
@@ -84,9 +84,9 @@ class ProductController extends Controller
     public function index(): JsonResponse
     {
         try {
-            return $this->responseSuccess($this->productRepository->getAll(request()->all()), "Products fetched successfully");
-        } catch (Exception $e) {
-            return $this->responseError([], $e->getMessage());
+            return $this->responseSuccess($this->productRepository->getAll(request()->all()), "Products fetched successfully.");
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
         }
     }
 
@@ -143,36 +143,171 @@ class ProductController extends Controller
      *     )
      * )
      */
-    public function store(ProductCreateRequest $request)
+    public function store(ProductCreateRequest $request): JsonResponse
     {
         try {
-            return $this->responseSuccess($this->productRepository->create($request->all()), "Product created successfully");
-        } catch (Exception $e) {
-            return $this->responseError([], $e->getMessage());
+            return $this->responseSuccess($this->productRepository->create($request->all()), "Product created successfully.");
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
         }
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *     path="/api/products/{id}",
+     *     tags={"Products"},
+     *     summary="Get product detail",
+     *     description="Get product detail",
+     *     operationId="showProduct",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="product id",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     security={{"bearer":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Product not found."
+     *     )
+     * )
      */
-    public function show(string $id)
+    public function show(int $id): JsonResponse
     {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->getById($id), "Product fetched successfully.");
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
+        }
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Post(
+     *     path="/api/products/{id}",
+     *     tags={"Products"},
+     *     summary="Update product",
+     *     description="Update product",
+     *     operationId="updateProduct",
+     *     security={{"bearer":{}}},
+     *      @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="product id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *      @OA\Parameter(
+     *         name="_method",
+     *         in="query",
+     *         description="request method",
+     *         required=true,
+     *         @OA\Schema(
+     *             default="PUT",
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         description="Product Object",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="id",
+     *                     description="Product id",
+     *                     type="integer",
+     *                     example=""
+     *                 ),
+     *                 @OA\Property(
+     *                     property="title",
+     *                     description="Product title",
+     *                     type="string",
+     *                     example="Product title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="slug",
+     *                     description="Product slug",
+     *                     type="string",
+     *                     example="product-title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="price",
+     *                     description="Product price",
+     *                     type="integer",
+     *                     example="200"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="image",
+     *                     description="Product image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *                  required = {"id", "title", "slug", "price"}
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input"
+     *     )
+     * )
      */
-    public function update(Request $request, string $id)
+    public function update(ProductUpdateRequest $request, int $id): JsonResponse
     {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->update($id, $request->all()), "Product updated successfully.");
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
+        }
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\DELETE(
+     *     path="/api/products/{id}",
+     *     tags={"Products"},
+     *     summary="Delete product",
+     *     description="Delete product",
+     *     operationId="deleteProduct",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="product id",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     security={{"bearer":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Product not found."
+     *     )
+     * )
      */
-    public function destroy(string $id)
+    public function destroy(int $id): JsonResponse
     {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->delete($id), "Product deleted successfully.");
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
+        }
     }
 }
